--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-GITHUB_TOKEN=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
-GITHUB_OWNER=hnasibe61
-GITHUB_REPO=samserv
-OPENAI_API_KEY=sk-cLZ0f5lngLbtL9iV9XTZzocuNlSGGQpOtFjzOlF0YnnaYWrk
+REPO_TOKENVALUE=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
+OWNERVALUE=hnasibe61
+REPOVALUE=samserv
+OPENAI_API_KEYVALUE=sk-cLZ0f5lngLbtL9iV9XTZzocuNlSGGQpOtFjzOlF0YnnaYWrk
