--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REPO_TOKENVALUE=sk-cLZ0f5lngLbtL9iV9XTZzocuNlSGGQpOtFjzOlF0YnnaYWrk
-OWNERVALUE=hnasibe61
-REPOVALUE=samserv
-OPENAI_API_KEYVALUE=sk-cLZ0f5lngLbtL9iV9XTZzocuNlSGGQpOtFjzOlF0YnnaYWrk
+  OPENAI_API_KEYVALUE: ${{ secrets.OPENAI_API_KEYVALUE }}
+  REPO_TOKENVALUE: ${{ secrets.REPO_TOKENVALUE }}
+  OWNERVALUE: ${{ secrets.OWNERVALUE }}
+  REPOVALUE: ${{ secrets.REPOVALUE }}
